--- a/dev/static/stylus/vars.styl
+++ b/dev/static/stylus/vars.styl
@@ -1,7 +1,25 @@
-// ЦВЕТА
+  // gradient
+$bittersweet    = #fc5a59 // right part
+$neon-carrot    = #ff9626 // left part
 
+  // header
+$white          = #ffffff // all text
 
-// РАЗМЕРЫ
+// about
+$dark-orange    = #ff8400 // chapter
+$night-rider    = #343434  // title, item title
+$zambezi        = #5c5c5c // item text
 
+  // join
+$white          = #ffffff // title, text
+$white-tint     = #fffefe // text form placeholder
+$dark-orange    = #ff8400 // text btn
 
-// ШРИФТЫ
+  // contact
+$white-smoke    = #f1f1f1 // bg
+$zambezi        = #5c5c5c // text
+
+  // footer
+$gainsboro      = #d8d8d8 // border
+$white          = #ffffff // bg
+$zambezi        = #5c5c5c // text-color
