--- a/dev/static/stylus/common_styles.styl
+++ b/dev/static/stylus/common_styles.styl
@@ -1,10 +1,12 @@
 .wrapper
-    //margin 0 auto
-    //width 100%
-    background-color yellow
+    //background-color yellow
 
 
 .inner
     margin 0 auto
     max-width 1160px
-    background-color pink
+    //background-color pink
+
+
+.gradient
+    background linear-gradient(45deg, $bittersweet, $neon-carrot)
