--- a/dev/static/stylus/modules/header.styl
+++ b/dev/static/stylus/modules/header.styl
@@ -1,5 +1,38 @@
-.header
-    //column(1/3, offset: 1/4)
+header
+    background url('../img/general/header-bg2.png')
+    //linear-gradient(45deg, #f73d4b, $dark-orange)
+    //background-blend-mode  darken, multiply
+    background-size cover
+    color $white
 
 
-//.header-inner
+.header-title
+    font-size 38px
+    letter-spacing 0.01em
+
+
+.header-text
+    margin 60px 0 100px
+    font-size 20px
+    line-height 36px
+    letter-spacing 0.01em
+
+
+.header-inner
+    display flex
+    justify-content space-between
+    padding 240px 0 0 0
+
+
+.header-text-wrap
+    max-width 570px
+
+
+.btn-header
+    display inline-block
+    padding 22px 55px
+    max-width 245px
+    font-size 18px
+    border 2px solid $white
+    border-radius 5px
+    letter-spacing 0.05em
