--- a/dev/pug/components/navigation.pug
+++ b/dev/pug/components/navigation.pug
@@ -1,9 +1,9 @@
-nav.nav-wpap
+nav.nav-wrap
 
     a(href= nav.logo.link ).logo
         img(src= nav.logo.img).logo-img
 
     ul.nav-list
-    each link, title in nav.navPages
-        li.nav-item
-            a(href= link).nav-link= title
+        each link, title in nav.navPages
+            li.nav-item
+                a(href= link).nav-link= title
