--- a/dev/static/stylus/components/navigation.styl
+++ b/dev/static/stylus/components/navigation.styl
@@ -1,2 +1,22 @@
+.nav-wrap
+    display flex
+    justify-content space-between
+    align-items flex-end
+    padding 25px 0 0 0
+
+
+.nav-list
+    width 100%
+    max-width 680px
+    display flex
+    justify-content space-between
+
+
 .nav-link
     font-size 18px
+
+    &:hover
+        //text-shadow 2px 2px 2px #000
+
+    &:active
+        //text-shadow 1px 1px 2px #000
