--- a/dev/pug/modules/join.pug
+++ b/dev/pug/modules/join.pug
@@ -6,4 +6,4 @@
 
             form(method='post').join-form
                 input(type='email', placeholder='Your email address ...', title='youremail@gmail.com', required)
-                input(type='submit', value='I`M READY').join-btn
+                input(type='submit', value='I`M READY').btn-join
