--- a/dev/static/stylus/components/navigation.styl
+++ b/dev/static/stylus/components/navigation.styl
@@ -14,9 +14,7 @@
 
 .nav-link
     font-size 18px
+    transition .1s
 
     &:hover
-        //text-shadow 2px 2px 2px #000
-
-    &:active
-        //text-shadow 1px 1px 2px #000
+        border-bottom 2px solid $white
