--- a/dev/static/stylus/modules/header.styl
+++ b/dev/static/stylus/modules/header.styl
@@ -1,23 +1,25 @@
 header
-    background url('../img/general/header-bg2.png')
-    //linear-gradient(45deg, #f73d4b, $dark-orange)
-    //background-blend-mode  darken, multiply
-    //background-size cover
+    background url('../img/general/header-bg2.png'), linear-gradient(90deg, rgb(247, 61, 75), rgb(255, 136, 0))
+    background-blend-mode  unset
     background-repeat no-repeat
     background-position center top
     color $white
 
 
 .header-title
-    font-size 38px
+.header-text
+.header-screen
     letter-spacing 0.01em
+
+
+.header-title
+    font-size 38px
 
 
 .header-text
     margin 60px 0 100px
     font-size 20px
     line-height 36px
-    letter-spacing 0.01em
 
 
 .header-inner
@@ -40,7 +42,6 @@ header
 .header-screen
     position(absolute,,,245px,110px)
     font-size 18px
-    letter-spacing 0.01em
 
 
 .btn-header
@@ -51,3 +52,8 @@ header
     border 2px solid $white
     border-radius 5px
     letter-spacing 0.05em
+
+    &:hover
+        background-color $white
+        color $bittersweet
+
