--- a/dev/static/stylus/modules/join.styl
+++ b/dev/static/stylus/modules/join.styl
@@ -25,8 +25,7 @@
 
 
 .join-form
-    margin 0 auto
-    width 830px
+    display flex
 
 
 input[type='email']::placeholder
@@ -37,8 +36,6 @@ input[type='email']
 
 
 input[type='email']
-    width 100%
-    max-width 600px
     padding 22px 30px
     background-color transparent
     border-radius 5px
@@ -46,7 +43,6 @@ input[type='email']
 
 
 .btn-join
-    margin 0 0 0 25px
     padding 22px 40px
     background-color $white
     color $dark-orange
@@ -60,6 +56,6 @@ input[type='email']
         color $white
         cursor pointer
         box-shadow 0
-        
+
     &:active
         box-shadow 0
