--- a/dev/static/stylus/media.styl
+++ b/dev/static/stylus/media.styl
@@ -5,6 +5,7 @@
 
 
 
+
   // join
 @media screen and (min-width: 841px)
     .join-form
@@ -27,3 +28,26 @@
 
     .btn-join
         margin 25px 0px 0px 0px
+
+
+    
+    // footer
+@media screen and (max-width: 1180px)
+    footer
+        .inner
+            padding 25px 20px
+
+
+@media screen and (min-width: 1180px)
+    footer
+        .inner
+            padding 25px 0
+
+
+@media screen and (max-width: 468px)
+    footer
+        .inner
+            flex-direction column-reverse
+
+    .copyright
+        margin 10px 0 0 0
