--- a/dev/static/stylus/media.styl
+++ b/dev/static/stylus/media.styl
@@ -30,6 +30,17 @@
         margin 25px 0px 0px 0px
 
 
+
+    // contact
+@media screen and  (max-width: 1028px)
+    .contact-list
+        flex-direction column
+        align-items center
+
+    .contact-item
+        width 340px
+
+
     
     // footer
 @media screen and (max-width: 1180px)
