--- a/dev/static/stylus/modules/about.styl
+++ b/dev/static/stylus/modules/about.styl
@@ -28,11 +28,10 @@
 
 .about-item-group
     display flex
-    flex-direction column
 
 
 .about-item
-    margin 75px 0 0 0
+    margin 75px 20px 0
     padding 150px 0 0 0
     max-width 315px
     text-align center
