--- a/dev/static/stylus/modules/header.styl
+++ b/dev/static/stylus/modules/header.styl
@@ -13,18 +13,17 @@ header
 
 
 .header-title
-    font-size 38px
+    //font-size 38px
 
 
 .header-text
-    margin 60px 0 100px
     font-size 20px
     line-height 36px
 
 
 .header-inner
     display flex
-    justify-content space-between
+    //justify-content space-between
     align-items center
     padding 125px 0 100px
 
@@ -36,7 +35,6 @@ header
 .header-img-wrap
     position relative
     size(297px, 588px)
-    background url('../../../static/img/general/screen.png') no-repeat center 205px
 
 
 .header-screen
