minor project change

--- a/dev/pug/modules/about.pug
+++ b/dev/pug/modules/about.pug
@@ -1,5 +1,5 @@
 .wrapper
-    .about
+    .about#about
         .inner
             p.about-chapter= about.chapter
             h2.about-title= about.title
