--- a/dev/static/stylus/modules/footer.styl
+++ b/dev/static/stylus/modules/footer.styl
@@ -35,14 +35,18 @@ footer
     &:active
         background-color $bittersweet
 
+    &:focus
+         outline $dark-orange auto 2px
+
+
 
 .social-facebook
-    background-position 16px 9px
+    background-position 15px 10px
 
 
 .social-google
-    background-position -47px  9px
+    background-position -46px  10px
 
 
 .social-insta
-    background-position -126px 9px
+    background-position -125px 10px
