--- a/dev/static/stylus/modules/about.styl
+++ b/dev/static/stylus/modules/about.styl
@@ -36,7 +36,12 @@
     max-width 315px
     text-align center
     background url('../img/content/about-item-bg.png') no-repeat center top
+    transition 0.1s
 
+    &:hover
+        cursor pointer
+        transform scale(1.02)
+        
 
 .about-item-title
 .about-item-text
