minor project changes

--- a/dev/static/stylus/media.styl
+++ b/dev/static/stylus/media.styl
@@ -4,6 +4,18 @@
 
 
 
+    // navigation
+@media screen and (max-width: 800px)
+    .nav-list
+        display none
+
+@media screen and (min-width: 800px)
+    .nav-list
+        display flex
+        justify-content space-between
+
+
+
     // header
 @media screen and (max-width: 650px)
     .header-inner
@@ -112,7 +124,14 @@
         align-items center
 
     .contact-item
-        width 340px
+        width 300px
+
+
+    .contact-tell
+    .contact-email
+    .contact-address
+        padding 25px 0 25px 50px
+        font-size 14px
 
 
 
