--- a/dev/static/stylus/modules/join.styl
+++ b/dev/static/stylus/modules/join.styl
@@ -1,6 +1,6 @@
 .join
     padding 150px 0
-    background linear-gradient(90deg, $bittersweet, $neon-carrot)
+    background linear-gradient(135deg, $bittersweet, $neon-carrot)
 
 
 .join-title
@@ -59,3 +59,10 @@ input[type='email']
 
     &:active
         box-shadow 0
+
+
+input[type='email']
+.btn-join
+    &:focus
+        outline-style auto
+        outline-color #02a5db
