--- a/dev/static/stylus/media.styl
+++ b/dev/static/stylus/media.styl
@@ -60,7 +60,7 @@
         font-size 38px
 
     .header-img-wrap
-      background url('../../../static/img/general/screen.png') no-repeat center 205px
+      background url('../../static/img/general/screen.png') no-repeat center 205px
 
 
 
