--- a/dev/static/stylus/modules/about.styl
+++ b/dev/static/stylus/modules/about.styl
@@ -18,7 +18,7 @@
     font-size 36px
     letter-spacing 0.01em
     color $night-rider
-    font-weight normal
+    font-weight 500
 
 
 .about-list
@@ -41,7 +41,7 @@
     &:hover
         cursor pointer
         transform scale(1.02)
-        
+
 
 .about-item-title
 .about-item-text
@@ -52,7 +52,7 @@
 .about-item-title
     margin 0 0 20px 0
     color $night-rider
-    font-weight normal
+    font-weight 500
 
 
 .about-item-text
