--- a/dev/static/stylus/modules/join.styl
+++ b/dev/static/stylus/modules/join.styl
@@ -13,7 +13,7 @@
     font-size 30px
     letter-spacing 0.2em
     text-transform uppercase
-    font-weight normal
+    font-weight 500
 
 
 .join-text
