--- a/dev/pug/modules/header.pug
+++ b/dev/pug/modules/header.pug
@@ -3,6 +3,7 @@
         .inner
 
             include ../components/navigation
+            include ../components/navigation_mobile
 
             .header-inner
 
