--- a/dev/static/stylus/main.styl
+++ b/dev/static/stylus/main.styl
@@ -4,6 +4,8 @@
 @import 'mixins.styl'
 
 @import 'components/navigation.styl'
+@import 'components/navigation_mobile.styl'
+
 @import 'modules/header.styl'
 @import 'modules/about.styl'
 @import 'modules/join.styl'
