--- a/dev/static/stylus/media.styl
+++ b/dev/static/stylus/media.styl
@@ -14,6 +14,12 @@
         display flex
         justify-content space-between
 
+@media screen and (min-width: 800px)
+    .nav-icon
+    #toggle-btn
+    .nav-mobile-list
+        display none
+
 
 
     // header
@@ -29,7 +35,7 @@
         margin 0 auto
         padding 0 20px
         width 297px
-        z-index 1000
+        z-index 99 // '?'
 
     .header-title
         font-size 28px
@@ -41,6 +47,7 @@
     .btn-header
         margin-left 6px
         width 100%
+
 
     .header-screen
         display none
